# ve-memory-mapping

./: .gitignore  Makefile.am  README  configure.ac  vemm.spec.in
common/: log_wrapper.c  logprio.h  vemm.proto  vepm.h
debian/: Makefile.am  control.in  copyright  rules.in  ve-memory-mapping-dev.install.in  ve-memory-mapping.install.in  ve-memory-mapping.preinst  ve-memory-mapping.prerm
vemmagent/: Makefile.am  VEMMAgent.hpp  vemmagent.cpp  vemmagent.h
vemmd/: Dispatcher.hpp  Dispatcher.ipp  Makefile.am  OSDaemonProxy.cpp  OSDaemonProxy.hpp  UpcallReceiver.cpp  UpcallReceiver.hpp  log.cpp  log.hpp  main.cpp  vemmd.options.in  vemmd.service.in  vemmd_main.cpp  vemmd_main.hpp
